--- a/app/src/main/res/layout/weather_rv_item.xml
+++ b/app/src/main/res/layout/weather_rv_item.xml
@@ -41,7 +41,10 @@
             android:layout_height="40dp"
             android:layout_below="@id/idTVTemperature"
             android:layout_centerHorizontal="true"
-            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             android:padding="4dp"
             android:src="@mipmap/ic_launcher" />
 
