--- a/app/src/main/res/layout/weather_rv_item.xml
+++ b/app/src/main/res/layout/weather_rv_item.xml
@@ -31,6 +31,7 @@
             android:layout_below="@id/idTVTime"
             android:gravity="center"
             android:text="20"
+            android:layout_margin="5dp"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20sp" />
